Update pagina de usuario
Adicionado funções de alterar senha e mostrar o usuario logado

--- a/codigo-fonte/src/usuario/usuario.css
+++ b/codigo-fonte/src/usuario/usuario.css
@@ -14,6 +14,11 @@ body {
 p{
     font-family: var(--paragrafo);
     font-size: small;
+    text-align: center;
+}
+
+.botao{
+    margin-top: 20px;
 }
 
 h2{
